--- a/learning/just_css/learning.css
+++ b/learning/just_css/learning.css
@@ -12,14 +12,12 @@ ul {
 /* Селектор по тегу */
 section {
     background-color: goldenrod;
-    padding: 1rem; /* Добавлено для лучшего отображения */
-    margin-bottom: 1rem; /* Добавлено для разделения секций */
 }
 
 /* Селектор по классу (рекомендуемый способ) */
 .user-warning {
     color: darkred;
-    font-size: 1.5rem; /* Использование rem вместо px для адаптивности */
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
@@ -27,15 +25,12 @@ section {
 #id-selector {
     font-size: 1.5rem;
     color: blue;
-    display: block; /* Добавлено для лучшего отображения */
-    margin-top: 0.5rem;
 }
 
 /* Селектор по атрибуту */
 [type="checkbox"] {
     height: 1.5rem;
-    width: 1.5rem;
-    vertical-align: middle; /* Добавлено для выравнивания с текстом */
+    width: 1.5rem
 }
 
 /* Селектор потомков */
@@ -53,15 +48,11 @@ h1,
 h2,
 h3 {
     color: teal;
-    margin: 1rem 0; /* Добавлено для единообразия */
 }
 
 /* Множественные классы */
 .button {
     background-color: lightgray;
-    padding: 0.5rem 1rem;
-    border: none;
-    cursor: pointer;
 }
 
 .button.is-active {
@@ -72,7 +63,6 @@ h3 {
 .error-message {
     color: red;
     visibility: hidden;
-    margin-top: 0.5rem;
 }
 
 .input.is-invalid + .error-message {
@@ -86,12 +76,61 @@ h3 {
 
 .using-after ~ .parag {
     color: aquamarine;
-    font-style: italic; /* Добавлено для наглядности */
 }
 
-/* Дополнительные улучшения */
-input {
-    display: block;
-    margin: 0.5rem 0;
-    padding: 0.5rem;
+.block-obj {
+    /* display: block; Для div значение block используется по умолчанию */
+    width: 100px;
+    height: 100px;
+    margin: 20px; /* margin - отступ со всех сторон вне элемента*/
+    padding: 30px; /* padding - отступ со всех сторон внутри элемента */
+    border: 5px solid red;
+}
+
+.inline-obj {
+    /* display: inline; Тег span является строчным тегом, для него не нужно указывать display:inline; */
+    margin: 20px;
+    padding: 5px;
+    border: 5px solid blue;
+}
+
+.inline-block-obj {
+    display: inline-block;
+    margin: 30px;
+    padding: 5px;
+    width: 100px;
+    height: 100px;
+    border: 5px solid darkgreen;
+}
+
+.none-obj {
+    display: none;
+}
+
+.test-block {
+    display: inline-block;
+    padding: 15px 40px;
+    border: 5px solid
+}
+
+.common-box {
+    height: 250px;
+    width: 250px;
+    padding: 30px;
+    border: 5px solid darkblue;
+    margin-bottom: 30px;
+    background-color: bisque;
+}
+
+.normal-size {
+    box-sizing: border-box;
+}
+
+.rule-breaking-block {
+    width: 100px;
+    height: 100px;
+    padding-inline: 0px;
+    margin: -90px 0 0 40px;
+    border: 5px solid;
+    background-color: yellowgreen;
 }
