--- a/learning/just_css/learning.css
+++ b/learning/just_css/learning.css
@@ -185,3 +185,33 @@ h3 {
     border-color: black;
     background-color: black;
 }
+
+.box-1 {
+    background-image: linear-gradient(270deg,indianred,cornflowerblue);
+}
+
+.box-2 {
+    background-image: radial-gradient(slateblue,darkorange);
+}
+
+.box-3 {
+    background-image: conic-gradient(deepskyblue,lightpink);
+}
+
+.grad-boxes div{
+    margin: 0 30px 30px 30px;
+    width: 150px;
+    height: 150px;
+}
+
+.box-example {
+    width: 150px;
+    height: 150px;
+    background-image: linear-gradient(
+       darkmagenta 30%,
+       skyblue 40% 60%,
+       cornflowerblue 70% 
+    );
+    margin: 0 30px 30px 30px;
+    border: 3px solid;
+}
