css pre-last lessons

--- a/learning/just_css/learning.css
+++ b/learning/just_css/learning.css
@@ -86,7 +86,7 @@ h3 {
 }
 
 .some-box{
-    z-index: -1;
+    z-index: -200;
 }
 
 .block-obj {
@@ -284,7 +284,7 @@ dialog button {
     background-color: indianred;
     bottom: 0;
     left: 330px;
-    z-index: -1;
+    z-index: -200;
 }
 
 .five {
@@ -420,7 +420,7 @@ hr {
     color: crimson;
 }
 
-.with-red-placeholder {
+.with-red-placeholder::placeholder {
     color: red;
 }
 
@@ -519,4 +519,179 @@ section button {
 .order {
     grid-area: order;
     background-color: lightgreen;
+}
+
+.overflow-test {
+    margin-inline: 10px;
+    padding-inline: 10px;
+    width: 250px;
+    height: 100px;
+    background-color: lightseagreen;
+    border: 4px solid black;
+    overflow: auto;
+}
+
+.cliped {
+    margin-top: 10px;
+    overflow: clip;
+    opacity: 0.7;
+    height: 120px;
+    clip-path: circle(60%);
+}
+
+.link {
+    padding: 0 10px;
+    text-align: center;
+    margin: 20px auto ;
+    background-color: lightgreen;
+    display: flex;
+    justify-content: center;
+    width: 250px;
+    text-decoration: none;
+    color: black;
+}
+
+.griddy {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 10px;
+    background-color: aqua;
+    height: 500px;
+    padding: 10px;
+}
+
+.griddy-head {
+    grid-column: 1 / -1;
+    background-color: lightblue;
+    text-align: center;
+    font-weight: bold;
+    padding: 10px;
+    align-content: center;
+}
+
+.griddy-elem {
+    background-color: burlywood;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 5px;
+}
+
+.test-box {
+    background-color: lightgreen;
+    height: 200px;
+    width: 200px;
+    box-shadow: 4px -2px 12px 4px rgb(0 0 0 / 0.5);
+    border: 5px solid blue;
+    margin: 20px auto;
+}
+
+.transformed {
+    transform: translate(50px, -50%);
+    transform: scale(-1 , 0.7);
+}
+
+.boxin{
+    width: 50px;
+    height: 50px;
+    background-color: lightskyblue;
+    border: 2ppx solid indianred;
+    transition: all 0.8s ease 0s;
+}
+
+.translated-on-hover:hover .boxin{
+    transform: translateX(240px)
+}
+
+.scaled-on-hover:hover .boxin{
+    scale: 1.75;
+    translate: 200px;
+}
+
+.rotated-on-hover:hover .boxin{
+    rotate: 0.53turn;
+}
+
+.non-dec {
+    list-style: none;
+}
+
+.head {
+    font-weight: bold;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+
+@keyframes move-to-right {
+    0% {
+        transform: translateX(0);
+        background-color: lightseagreen;
+    }
+    30% {
+        background-color: red;
+    }
+    41% {
+        background-color: purple;
+        transform: translateX(1046px);
+    }
+    85% {
+        background-color: greenyellow;
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+
+
+.line {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    border: 4px solid;
+    margin-inline: 90px;
+    flex-wrap: wrap;
+    height: 70px;
+}
+
+.label {
+    padding-left: 15px;
+    font-size: 18px;
+    margin-right: 20px;
+    z-index: 100;
+}
+
+.line-box {
+    position: absolute;
+    z-index: -100;
+    width: 70px;
+    height: 100%;
+    background-color: lightseagreen;
+    animation-name: move-to-right;
+    animation-timing-function: ease;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    animation-duration: alternate;
+}
+
+.ease-in {
+    animation-timing-function: ease-in;
+}
+
+.ease-out {
+    animation-timing-function: ease-out;
+}
+
+.ease-in-out {
+    animation-timing-function: ease-in-out;
+}
+
+.linear {
+    animation-timing-function: linear;
 }
