--- a/practice/kropp-fintness/styles.css
+++ b/practice/kropp-fintness/styles.css
@@ -205,6 +205,7 @@ svg * {
      --color-light: #FFFFFF;
      --color-grey: #404040;
      --color-light-gray: #C4C4C4;
+     --color-dark-alternate: #131619;
 
      --border-radius: 30px;
      --border: 1px solid var(--color-light);
@@ -218,6 +219,8 @@ svg * {
      --container-padding-x: 15px;
 
      --transition-duration: 0.2s;
+
+     --header-height: 90px;
 }
 
 /* Основные стили */
@@ -272,7 +275,9 @@ svg {
      justify-content: space-between;
      align-items: center;
      column-gap: 20px;
+     min-height: var(--header-height);
      padding-inline: 32px;
+     background-color: var(--color-dark-alternate);
 }
 
 .header-logo {
@@ -289,7 +294,7 @@ svg {
      display: inline-flex;
      align-items: center;
      column-gap: 7px;
-     height: 90px;
+     height: var(--header-height);
      text-decoration: none;
      text-transform: uppercase;
      font-weight: 700;
@@ -300,7 +305,7 @@ svg {
 .header-menu-link.is-current::after {
      content: "";
      width: 5px;
-     height: 5px;
+     aspect-ratio: 1;
      background-color: currentColor;
      border-radius: 50%;
 }
@@ -337,12 +342,25 @@ svg {
      justify-content: center;
      row-gap: 4px;
      width: 40px;
-     height: 40px;
+     aspect-ratio: 1;
      padding-left: 8px;
      color: var(--color-light);
      background-color: transparent;
      border: var(--border);
-     border-radius: var(--border-radius);
+     border-radius: 50%;
+}
+
+.visually-hidden {
+     position: absolute !important;
+     width: 1px !important;
+     height: 1px !important;
+     margin: -1px !important;
+     border: 0 !important;
+     padding: 0 !important;
+     white-space: nowrap !important;
+     clip-path: inset(100%) !important;
+     clip: rect(0 0 0 0) !important;
+     overflow: hidden !important;
 }
 
 .header-burger-button-line {
@@ -357,11 +375,85 @@ svg {
      border-color: currentColor;
 }
 
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  min-height: calc(100vh - var(--header-height));
+  padding: 36px 70px;
+  color: var(--color-light);
+  background-color: var(--color-dark-alternate);
+}
+
+.banner-body {
+  text-transform: uppercase;
+}
+
+.banner-info {
+  display: flex;
+  align-items: end;
+  font-size: clamp(16px, 1.56vw, 30px);
+  line-height: 1.27;
+  font-weight: 700;
+}
+
+.banner-info::before {
+  content: '';
+  width: clamp(60px, 10.1vw, 194px);
+  aspect-ratio: 1;
+  margin-right: 30px;
+  background: url('./icons/bold-arrow-down-right.svg') center/contain no-repeat;
+}
+
+.banner-title {
+  font-size: min(18.75vw, 360px);
+  line-height: 1;
+}
+
+.banner-pagination-list {
+  display: flex;
+  justify-content: center;
+}
+
+.banner-pagination-item {
+  display: flex;
+}
+
+.banner-pagination-button {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 7px;
+  background-color: transparent;
+  border: none;
+}
+
+.banner-pagination-button::after {
+  content: '';
+  width: 10px;
+  aspect-ratio: 1;
+  border: var(--border);
+  border-radius: 50%;
+  transition-duration: var(--transition-duration);
+}
+
+.banner-pagination-button.is-current::after {
+  background-color: var(--color-light);
+}
+
+.banner-pagination-button:not(.is-current):hover::after {
+  border-color: var(--color-light-gray);
+}
+
 @media (max-width: 1024px) {
      .header {
           flex-wrap: wrap;
           row-gap: 10px;
           padding-top: 20px;
+     }
+
+     .header,
+     .banner {
           padding-inline: 15px;
      }
 
@@ -372,6 +464,10 @@ svg {
 
      .header-menu-link {
           height: 50px;
+     }
+
+     .banner {
+          row-gap: 10px;
      }
 }
 
@@ -394,5 +490,12 @@ svg {
 
      .button {
           padding-inline: 18px;
+     }
+
+     .banner-info {
+          margin-bottom: 5px;
+     }
+     .banner-info::before {
+          margin-right: 10px;
      }
 }
