--- a/practice/kropp-fintness/styles.css
+++ b/practice/kropp-fintness/styles.css
@@ -239,6 +239,41 @@ h1, h2, h3, h4, h5, h6 {
      text-transform: uppercase;
 }
 
+.title-medium {
+     font-size: clamp(20px, 2.08vw, 40px);
+     line-height: 1.3;
+     color: var(--color-light);
+}
+
+.backdrop-title {
+  position: relative;
+  z-index: 2;
+}
+
+.backdrop-title::before {
+  content: '';
+  display: block;
+  position: absolute;
+  right: calc(100% + 8px);
+  width: 26px;
+  aspect-ratio: 1;
+  background: url('./icons/plus.svg') center/contain no-repeat;
+}
+
+.backdrop-title::after {
+  content: attr(data-title);
+  position: absolute;
+  z-index: -1;
+  top: -0.3em;
+  left: -0.6em;
+  font-family: var(--font-family-accent);
+  font-size: 2.8em;
+  line-height: 1;
+  color: transparent;
+  -webkit-text-stroke: 1px var(--color-light-gray);
+  text-stroke: 1px var(--color-light-gray);
+}
+
 a {
      color: var(--color-light);
      cursor: pointer;
@@ -246,6 +281,14 @@ a {
 
 a:hover {
      color: var(--color-light-gray);
+}
+
+p {
+     margin-block: 0;
+}
+
+p:not([class]):not(:last-child) {
+     margin-bottom: 24px;
 }
 
 a,
@@ -320,6 +363,7 @@ svg {
      line-height: 2;
      letter-spacing: 1.2px;
      text-transform: uppercase;
+     text-decoration: none;
      white-space: nowrap;
      background-color: var(--color-light);
      border-radius: var(--border-radius);
@@ -330,6 +374,33 @@ svg {
 .button:hover {
      background-color: var(--color-light-gray);
 }
+
+.button.transparent {
+     position: relative;
+     height: var(--input-height);
+     padding-left: 31px;
+     padding-right: 80px;
+     background-color: transparent;
+     border: var(--border);
+}
+
+.button.transparent::after {
+     content: '';
+     position: absolute;
+     right: 0;
+     aspect-ratio: 1;
+     height: 100%;
+     background: url(./icons/arrow-top-right.svg) center/70% no-repeat;
+     border: var(--border);
+     border-radius: 50%;
+}
+
+.button.transparent:hover {
+     color: var(--color-dark);
+     background-color: var(--color-light-gray);
+}
+
+
 
 .header-actions {
      display: flex;
@@ -445,6 +516,58 @@ svg {
   border-color: var(--color-light-gray);
 }
 
+.motivation-item:nth-child(even) {
+     background-color: var(--color-dark-alternate);
+}
+
+.motivation-item:nth-child(even) .motivation-card{
+     flex-direction: row-reverse;
+}
+
+.motivation-card {
+     display: flex;
+     justify-content: start;
+     align-items: center;
+     column-gap: clamp(30px, 10.42vw, 200px);
+}
+
+.motivation-card-image {
+     margin-block: -60px
+}
+
+.motivation-card-body {
+     padding-left: 35px;
+}
+
+.motivation-card-title:not(:last-child) {
+     margin-bottom: 14px;
+}
+
+
+.motivation-card-description {
+     max-width: 400px;
+}
+
+.motivation-card-description:not(:last-child) {
+     margin-bottom: 37px;
+}
+
+
+
+
+
+@media (max-width:1919px) {
+     .motivation-card-image {
+          margin-block: -20px;
+     }
+}
+
+@media (max-width: 1129px) {
+     .motivation-card-image {
+          margin-block: 0;
+     }
+}
+
 @media (max-width: 1024px) {
      .header {
           flex-wrap: wrap;
@@ -468,6 +591,15 @@ svg {
 
      .banner {
           row-gap: 10px;
+     }
+
+     .motivation-card-body {
+          padding-block: 50px;
+     }
+
+     .motivation-card-image {
+          max-width: 30%;
+          height: auto;
      }
 }
 
@@ -497,5 +629,23 @@ svg {
      }
      .banner-info::before {
           margin-right: 10px;
+     }
+
+     .motivation-card,
+     .motivation-item:nth-child(even) .motivation-card {
+          flex-direction: column-reverse;
+     }
+
+     .motivation-card {
+          padding-block: 30px;
+          row-gap: 30px;
+     }
+
+     .motivation-card-image {
+          max-width: 60%;
+     }
+
+     .motivation-card-description:not(:last-child) {
+          margin-bottom: 20px;
      }
 }
