--- a/practice/kropp-fintness/styles.css
+++ b/practice/kropp-fintness/styles.css
@@ -96,9 +96,12 @@ p:where(:not([class]):not(:last-child)) {
  * Упрощаем работу с изображениями и видео
  */
 img, video {
+  border: none !important;
+  outline: none;
   display: block;
   max-width: 100%;
-  height: auto;
+  box-shadow: none;
+
 }
 
 /**
@@ -138,6 +141,10 @@ body {
    * Унифицированный интерлиньяж
    */
   line-height: 1.5;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Скрыть в Chrome, Safari, Edge */
 }
 
 /**
@@ -235,6 +242,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+     color: var(--color-light);
      font-weight: 700;
      text-transform: uppercase;
 }
@@ -242,7 +250,11 @@ h1, h2, h3, h4, h5, h6 {
 .title-medium {
      font-size: clamp(20px, 2.08vw, 40px);
      line-height: 1.3;
-     color: var(--color-light);
+}
+
+.title-big {
+     font-size: clamp(24px, 3.21vw, 60px);
+     line-height: 1.2;
 }
 
 .backdrop-title {
@@ -254,6 +266,7 @@ h1, h2, h3, h4, h5, h6 {
   content: '';
   display: block;
   position: absolute;
+  top: 0.1em;
   right: calc(100% + 8px);
   width: 26px;
   aspect-ratio: 1;
@@ -272,6 +285,11 @@ h1, h2, h3, h4, h5, h6 {
   color: transparent;
   -webkit-text-stroke: 1px var(--color-light-gray);
   text-stroke: 1px var(--color-light-gray);
+}
+
+.backdrop-title.centered::after {
+     left: 50%;
+     translate: -50% 0;
 }
 
 a {
@@ -380,6 +398,7 @@ svg {
      height: var(--input-height);
      padding-left: 31px;
      padding-right: 80px;
+     color: var(--color-light);
      background-color: transparent;
      border: var(--border);
 }
@@ -398,6 +417,27 @@ svg {
 .button.transparent:hover {
      color: var(--color-dark);
      background-color: var(--color-light-gray);
+}
+
+.input {
+     width: 100%;
+     height: var(--input-height);
+     padding: 25px;
+     color: var(--color-light);
+}
+
+.input::placeholder {
+     color: var(--color-light-gray);
+}
+
+.input:hover {
+     border-color: var(--color-light);
+}
+
+.input:focus {
+     background-color: var(--color-light);
+     color: var(--color-dark);
+     outline: none;
 }
 
 
@@ -552,6 +592,159 @@ svg {
      margin-bottom: 37px;
 }
 
+.training-types {
+     position: relative;
+     max-width: 100%;
+     overflow: hidden;
+     margin-inline: auto;
+     padding-top: 70px;
+     padding-bottom: 120px;
+     background-color: var(--color-dark);
+}
+
+.training-types-list {
+     display: grid;
+     grid-template-columns: repeat(6, 1fr);
+     gap: 60px;
+}
+
+.training-types-item {
+  --trainingTypesItemBgIconSize: 80px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 32px;
+  padding-top: var(--trainingTypesItemBgIconSize);
+  background: url('./icons/transparent-arrow-bottom-left.svg') 100% 0/var(--trainingTypesItemBgIconSize) no-repeat;
+}
+
+.training-types-title {
+     font-size: 16px;
+}
+
+.join-us {
+     background-color: var(--color-dark-alternate);
+}
+
+.join-us-form-button {
+     color: var(--color-light);
+}
+
+.join-us-video-wrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 150px 30px;
+  background: url('./images/join-us-bg.jpg') center/cover no-repeat var(--color-dark-alternate);
+}
+
+.join-us-video {
+  width: 100%;
+  max-width: 960px;
+  height: auto;
+}
+
+.join-us-video-play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 4px;
+  width: 200px;
+  aspect-ratio: 1;
+  font-size: 14px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--color-light);
+  background-color: transparent;
+  border: var(--border);
+  border-radius: 50%;
+}
+
+.join-us-video-play-button::after {
+  content: '';
+  width: 26px;
+  aspect-ratio: 1;
+  background: url('./icons/arrow-top-right.svg') center/contain no-repeat;
+  transition-duration: var(--transition-duration);
+}
+
+.join-us-video-play-button:hover {
+  color: var(--color-dark);
+  background-color: var(--color-light-gray);
+}
+
+.join-us-video-play-button:hover::after {
+  filter: invert(1);
+}
+
+.join-us-body {
+  padding-bottom: 150px;
+}
+
+.join-us-title {
+  position: relative;
+  margin-top: -0.4em;
+  font-size: clamp(64px, 9.37vw, 180px);
+  line-height: 1;
+  text-align: center;
+}
+
+.join-us-title::after {
+  content: '';
+  display: inline-block;
+  height: 0.7em;
+  aspect-ratio: 1;
+  margin-left: 0.14em;
+  background: url('./icons/bold-arrow-down-right.svg') center/contain no-repeat;
+  scale: 1 -1;
+}
+
+.join-us-title:not(:last-child) {
+  margin-bottom: 130px;
+}
+
+.join-us-form-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 7px;
+}
+
+.join-us-form-header:not(:last-child) {
+  margin-bottom: 52px;
+}
+
+.join-us-form-subtitle {
+     text-align: center;
+     font-size: 20px;
+     line-height: 1.65;
+     text-transform: uppercase;
+     color: var(--color-light);
+}
+
+.join-us-form-input {
+     max-width: 400px;
+     background-color: transparent;
+     border: 1px solid var(--color-light-gray);
+     border-radius: var(--border-radius);
+}
+
+.join-us-form-body {
+     display: flex;
+     justify-content: center;
+     column-gap: 20px;
+}
+
+
+
+
+
 
 
 
@@ -559,6 +752,12 @@ svg {
 @media (max-width:1919px) {
      .motivation-card-image {
           margin-block: -20px;
+     }
+}
+
+@media (max-width: 1280px) {
+     .training-types-list {
+          grid-template-columns: repeat(3, 1fr);
      }
 }
 
@@ -600,6 +799,14 @@ svg {
      .motivation-card-image {
           max-width: 30%;
           height: auto;
+     }
+
+     .join-us-body {
+          padding-bottom: 80px;
+     }
+
+     .join-us-title:not(:last-child) {
+          margin-bottom:80px;
      }
 }
 
@@ -648,4 +855,37 @@ svg {
      .motivation-card-description:not(:last-child) {
           margin-bottom: 20px;
      }
+
+     .training-types-list {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 30px;
+     }
+
+     .training-types-item {
+          --trainingTypesItemBgIconSize: 70px;
+          row-gap: 10px;
+     }
+
+     .training-types-image {
+          max-width: 120px;
+     }
+
+     .join-us-video-play-button {
+          width: 140px;
+     }
+
+     .join-us-title:not(:last-child) {
+          margin-bottom:40px;
+     }
+
+     .join-us-form-subtitle {
+          font-size: 16px;
+     }
+
+     .join-us-form-body {
+          flex-direction: column;
+          align-items: center;
+          row-gap: 20px;
+     }
+
 }
