--- a/practice/kropp-fintness/styles.css
+++ b/practice/kropp-fintness/styles.css
@@ -277,7 +277,7 @@ h1, h2, h3, h4, h5, h6 {
   content: attr(data-title);
   position: absolute;
   z-index: -1;
-  top: -0.3em;
+  top: -0.25em;
   left: -0.6em;
   font-family: var(--font-family-accent);
   font-size: 2.8em;
@@ -288,6 +288,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .backdrop-title.centered::after {
+     top: -0.3em;
      left: 50%;
      translate: -50% 0;
 }
@@ -329,6 +330,12 @@ svg {
      max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
      margin-inline: auto;
      padding-inline: var(--container-padding-x);
+}
+
+.container-wide {
+     width: 100%;
+     max-width: 1920px;
+     margin-inline: auto;
 }
 
 .header{
@@ -594,9 +601,7 @@ svg {
 
 .training-types {
      position: relative;
-     max-width: 100%;
      overflow: hidden;
-     margin-inline: auto;
      padding-top: 70px;
      padding-bottom: 120px;
      background-color: var(--color-dark);
@@ -716,16 +721,12 @@ svg {
   row-gap: 7px;
 }
 
-.join-us-form-header:not(:last-child) {
-  margin-bottom: 52px;
+.join-us-form-title {
+     margin-bottom: 20px;
 }
 
-.join-us-form-subtitle {
-     text-align: center;
-     font-size: 20px;
-     line-height: 1.65;
-     text-transform: uppercase;
-     color: var(--color-light);
+.join-us-form-header:not(:last-child) {
+  margin-bottom: 52px;
 }
 
 .join-us-form-input {
@@ -741,7 +742,69 @@ svg {
      column-gap: 20px;
 }
 
+.location {
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+}
 
+.location-map-image {
+     height: auto;
+}
+
+.location-body {
+     flex-direction: column;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: 80px 15px;
+     text-align: center;
+}
+
+.location-title:not(:last-child) {
+     margin-bottom: 14px;
+}
+
+.location-description {
+     min-width: 490px;
+}
+
+.location-description:not(:last-child) {
+     margin-bottom: 37px;
+}
+
+.family {
+     background-color: var(--color-dark-alternate);
+}
+
+.family-header {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     row-gap: 19px;
+     padding-top: 132px;
+     padding-bottom: 62px;
+     text-align: center;
+}
+
+.section-description {
+     font-size: 20px;
+     text-transform: uppercase;
+     line-height: 1.65;
+     color: var(--color-light);
+}
+
+.family-body {
+     display: flex;
+     justify-content: center;
+     column-gap: 26px;
+     scroll-snap-type: x mandatory;
+     overflow-x: scroll;
+     scroll-behavior: smooth;
+}
+
+.family-image {
+     scroll-snap-align: start;
+}
 
 
 
@@ -807,6 +870,15 @@ svg {
 
      .join-us-title:not(:last-child) {
           margin-bottom:80px;
+     }
+
+     .location {
+          display: flex;
+          flex-direction: column-reverse;
+     }
+
+     .family-image {
+          height: 360px;
      }
 }
 
@@ -878,7 +950,7 @@ svg {
           margin-bottom:40px;
      }
 
-     .join-us-form-subtitle {
+     .section-description {
           font-size: 16px;
      }
 
@@ -886,6 +958,27 @@ svg {
           flex-direction: column;
           align-items: center;
           row-gap: 20px;
+     }
+
+     .location-body {
+          padding-block: 40px;
+     }
+
+     .location-description:not(:last-child) {
+          margin-bottom: 20px;
+     }
+
+     .family-image {
+          height: 180px;
+     }
+
+     .family-header {
+          padding-top: 80px;
+          padding-bottom: 50px;
+     }
+
+     .family-body {
+          column-gap: 12px;
      }
 
 }
