kropp fitness #6(last)

--- a/practice/kropp-fintness/styles.css
+++ b/practice/kropp-fintness/styles.css
@@ -310,6 +310,10 @@ p:not([class]):not(:last-child) {
      margin-bottom: 24px;
 }
 
+:is(p,li) a{
+     text-decoration: none;
+}
+
 a,
 button,
 input,
@@ -322,8 +326,12 @@ button {
      cursor: default;
 }
 
-svg {
-     color: var(--color-light);
+svg *[fill] {
+     fill: currentColor;
+}
+
+svg *[stroke] {
+     stroke: currentColor;
 }
 
 .container {
@@ -427,13 +435,17 @@ svg {
 }
 
 .input {
-     width: 100%;
-     height: var(--input-height);
-     padding: 25px;
-     color: var(--color-light);
+  width: 100%;
+  height: var(--input-height);
+  padding-inline: 25px;
+  color: var(--color-light);
+  background-color: transparent;
+  border: 1px solid var(--color-light-gray);
+  border-radius: var(--border-radius);
 }
 
-.input::placeholder {
+.input::placeholder,
+.select.input:invalid {
      color: var(--color-light-gray);
 }
 
@@ -445,6 +457,18 @@ svg {
      background-color: var(--color-light);
      color: var(--color-dark);
      outline: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 
@@ -798,7 +822,7 @@ svg {
      justify-content: center;
      column-gap: 26px;
      scroll-snap-type: x mandatory;
-     overflow-x: scroll;
+     /* overflow-x: scroll; */
      scroll-behavior: smooth;
 }
 
@@ -806,6 +830,231 @@ svg {
      scroll-snap-align: start;
 }
 
+.calculate {
+     padding-block: 146px;
+     background-color: var(--color-dark-alternate);
+}
+
+.calculate-inner {
+     display: flex;
+     align-items: center;
+     column-gap: 36px;
+}
+
+.calculate-body {
+     flex-grow: 1;
+     max-width: 627px;
+}
+
+.calculate-title:not(:last-child) {
+     margin-bottom: 16px;
+}
+
+.calculate-description {
+     max-width: 385px;
+}
+
+.calculate-description:not(:last-child) {
+     margin-bottom: 30px;
+}
+
+.calculate-form-body:not(:last-child) {
+     margin-bottom: 26px;
+}
+
+.calculate-form-body {
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     gap: 18px 30px;
+}
+
+.calculate-input.wide {
+     grid-column: -1 / 1;
+}
+
+.calculate-table-wrapper {
+     position: relative;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     width: 100%;
+     max-width: 610px;
+}
+
+.calculate-table {
+     position: relative;
+     border-collapse: collapse;
+}
+
+.calculate-table th {
+     text-align-last: left;
+     text-transform: uppercase;
+     padding-block: 20px;
+     color: var(--color-light);
+}
+
+.calculate-table :is(td,th) {
+     padding-right: 30px;
+}
+
+.calculate-table :is(td,th):not(:first-child) {
+     padding-left: 30px;
+}
+
+.calculate-table :is(td,th):not(:last-child) {
+     border-right: 1px solid var(--color-light-gray);
+}
+
+.calculate-table tbody td {
+     border-top: 1px solid var(--color-light-gray);
+}
+
+.calculate-table tbody tr:last-child td:first-child {
+     position: relative;
+}
+
+.calculate-table tbody tr:last-child td:first-child::after {
+     content: '';
+     position: absolute;
+     bottom: 0;
+     right: 0;
+     width: 70%;
+     height: 1px;
+     background-color: var(--color-light-gray);
+}
+
+.calculate-table td {
+     padding-block: 14px;
+}
+
+.calculate-table tfoot td {
+     padding-top: 33px;
+     padding-bottom: 0;
+     color: var(--color-light);
+}
+
+.calculate-table-wrapper::before {
+     content: '';
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     background-color: var(--color-dark);
+     translate: -50% -50%;
+     width: 100%;
+     aspect-ratio: 1;
+     border-radius: 50%;
+}
+
+.calculate-table tfoot tr strong {
+     font-weight: 900;
+}
+
+.footer {
+     --footerLogoWidth: 20.77%;
+}
+
+.footer-header,
+.footer-body {
+     display: grid;
+     column-gap: 62px;
+}
+
+.footer-header {
+     grid-template-columns: var(--footerLogoWidth) auto;
+}
+
+.footer-header:not(:last-child) {
+     margin-bottom: 60px;
+}
+
+.footer-logo-image {
+     height: auto;
+}
+
+.footer-body {
+     grid-template-columns: var(--footerLogoWidth) repeat(3, 1fr);
+}
+
+.footer-main {
+     padding-top: 140px;
+     padding-bottom: 160px;
+}
+
+.footer-extra {
+     background-color: var(--color-dark-alternate);
+     padding-block: 16px;
+}
+
+.footer-description {
+     text-align-last: left;
+}
+
+.footer-column-title {
+     font-size: clamp(18px, 1.15vw, 22px);
+}
+
+.footer-column-title:not(:last-child) {
+     margin-bottom: 15px;
+}
+
+.footer-schedule:not(:last-child) {
+     margin-bottom: 13px;
+}
+
+.footer-address:not(:last-child) {
+     margin-bottom: 35px;
+}
+
+.footer-column-title.has-arrow::after {
+     content: '';
+     display: inline-block;
+     height: 0.74em;
+     aspect-ratio: 1;
+     margin-left: 0.5em;
+     background: url('./icons/bold-arrow-down-right.svg') center/contain no-repeat;
+     scale: -1 1;
+}
+
+.footer-subscribe {
+     position: relative;
+}
+
+.footer-subscribe:not(:last-child) {
+     margin-bottom: 50px;
+}
+
+.footer-subscribe-button {
+     position: absolute;
+     top: 0;
+     right: 0;
+     height: 100%;
+     aspect-ratio: 1;
+     background: url('./icons/arrow-top-right.svg') center/70% no-repeat;
+     border-radius: 50%;
+     border: var(--border);
+}
+
+.footer-subscribe-button:hover {
+     background-color: var(--color-light-gray);
+}
+
+.footer-subscribe-input {
+     padding-right: 70px;
+}
+
+.footer-soc1als-list {
+     display: flex;
+     column-gap: 18px;
+}
+
+.footer-soc1als-link {
+     display: flex;
+     width: 23px;
+}
+
+.footer-copyright {
+     font-size: 14px;
+}
 
 
 
@@ -880,6 +1129,43 @@ svg {
      .family-image {
           height: 360px;
      }
+
+     .calculate {
+          padding-block: 100px;
+     }
+
+     .calculate-form-body {
+          grid-template-columns: 1fr;
+     }
+
+     .calculate-button {
+          width: 100%;
+     }
+
+     .calculate-table :is(td,th) {
+          padding-block: 10px;
+     }
+
+     .calculate-table tfoot td {
+          padding-top: 10px;
+     }
+
+     .footer-main {
+          padding-top: 80px;
+          padding-bottom: 50px;
+     }
+
+     .footer-header {
+          display: flex;
+          flex-direction: column;
+          row-gap: 30px;
+     }
+
+     .footer-body {
+          grid-template-columns: repeat(2, 1fr);
+          row-gap: 30px;
+     }
+
 }
 
 @media (max-width:767px) {
@@ -981,4 +1267,36 @@ svg {
           column-gap: 12px;
      }
 
+     .calculate {
+          padding-block: 60px;
+     }
+
+     .calculate-inner {
+          column-gap: 20px;
+     }
+
+     .calculate-inner {
+          flex-direction: column;
+          row-gap: 30px;
+     }
+
+     .calculate-table-wrapper::before {
+          display: none;
+     }
+
+     .footer-body {
+          grid-template-columns: 1fr;
+     }
+
+     .footer-main {
+          padding-top: 50px;
+     }
+
+     .footer-header:not(:last-child) {
+          margin-bottom: 30px;
+     }
+
+     .footer-subscribe:not(:last-child) {
+          margin-bottom: 40px;
+     }
 }
