add images + part#1 complited

--- a/practice/positivus/styles/_media.scss
+++ b/practice/positivus/styles/_media.scss
@@ -1,3 +1,5 @@
+$container-size: 1440px;
+
 $desktop-above: 1281px;
 $desktop: 1280px;
 
@@ -7,8 +9,17 @@ $tablet: 1023px;
 $mobile-above: 768px;
 $mobile: 767px;
 
+$mobile-s-above: 481px;
+$mobile-s: 480px;
+
+@mixin container-size {
+     @media (max-width: $container-size) {
+          @content;
+     }
+}
+
 @mixin desktop-above {
-     @media (max-width: $desktop-above) {
+     @media (min-width: $desktop-above) {
           @content;
      }
 }
@@ -20,7 +31,7 @@ $mobile: 767px;
 }
 
 @mixin tablet-above {
-     @media (max-width: $tablet-above) {
+     @media (min-width: $tablet-above) {
           @content;
      }
 }
@@ -32,13 +43,25 @@ $mobile: 767px;
 }
 
 @mixin mobile-above {
-     @media (max-width: $mobile-above) {
+     @media (min-width: $mobile-above) {
           @content;
      }
 }
 
 @mixin mobile {
      @media (max-width: $mobile) {
+          @content;
+     }
+}
+
+@mixin mobile-s-above {
+     @media (min-width: $mobile-s-above) {
+          @content;
+     }
+}
+
+@mixin mobile-s {
+     @media (max-width: $mobile-s) {
           @content;
      }
 }
