--- a/practice/positivus/styles/_variables.scss
+++ b/practice/positivus/styles/_variables.scss
@@ -16,7 +16,7 @@
      --font-family-base: 'Space Grotesk', sans-serif;
 
      --container-width: 1240px;
-     --container-padding-width: 20px;
+     --container-padding-x: 20px;
 
      --section-padding-y: 70px;
 
@@ -24,4 +24,12 @@
      --button-height: 68px;
 
      --transition-duration: 0.2s;
+
+     @include desktop {
+          --section-padding-y: 50px;
+     }
+
+     @include mobile {
+          --section-padding-y: 30px;
+     }
 }
