--- a/practice/positivus/styles/styles.scss
+++ b/practice/positivus/styles/styles.scss
@@ -1,9 +1,22 @@
 @import
-'fonts',
-'globals',
-'media',
-'mixins',
-'normalize',
-'utils',
-'variables'
-;
+  'normalize',
+  'fonts',
+  'mixins',
+  'media',
+  'variables',
+  'utils',
+  'globals';
+
+  @import
+  'blocks/grid',
+  'blocks/button',
+  'blocks/burger-button',
+  'blocks/header',
+  'blocks/cross-button',
+  'blocks/mobile-overlay',
+  'blocks/section',
+  'blocks/hero',
+  'blocks/puddle-bg',
+  'blocks/services',
+  'blocks/service-card',
+  'blocks/banner';
