saved pozitivus changes

--- a/practice/positivus/styles/styles.scss
+++ b/practice/positivus/styles/styles.scss
@@ -19,4 +19,8 @@
   'blocks/puddle-bg',
   'blocks/services',
   'blocks/service-card',
-  'blocks/banner';
+  'blocks/banner',
+  'blocks/studies',
+  'blocks/process',
+  'blocks/team',
+  'blocks/team-card';
