--- a/practice/positivus/styles/blocks/_grid.scss
+++ b/practice/positivus/styles/blocks/_grid.scss
@@ -17,7 +17,17 @@
 
    &--2 {
       @include tablet {
-         grid-template-columns: 1fr;
+         --gridColumns: 1;
+      }
+   }
+
+   &--3 {
+      @include desktop {
+         --gridColumns: 2;
+      }
+
+      @include mobile {
+         --gridColumns: 1;
       }
    }
 }
