--- a/learning/just_js/css/stylesforjs.css
+++ b/learning/just_js/css/stylesforjs.css
@@ -1,18 +1,24 @@
 body {
    display: flex;
    justify-content: center;
+   align-items: center;
+
+   min-height: 100vh;
+   background-color: lightyellow;
 }
 
 
 .learning-link {
-   font-size: 24px;
+   font-size: 32px;
    text-decoration: dashed underline;
    color: lightcoral;
 }
 
 .practice-link {
-   font-size: 24px;
-   text-decoration: dashed underline;
+   font-size: 32px;
+   padding: 12px;
+
    color: lightseagreen;
+   text-decoration: dashed underline;
 }
 
